--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,15 +12,11 @@ header {
 }
 
 main{
-    display: flex;
-    flex-direction: wrap;
-    flex-wrap:wrap;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 h1 {
-    font-size:2rem;
+    font-size:1.5rem;
 }
 
 h2 {
