got game over screen to work, and store/get score from local storage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,19 @@ h2 {
     font-size: 1rem;
 }
 
+h3{
+    font-size: 3rem;
+    color:red;
+}
+
 .answer{
     display: none;
 }
+
+.gameOver{
+    display: none;
+}
+
+/* .score{
+    display: none;
+} */
