--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,13 @@ h3{
 #correctwrong{
     color:salmon
 }
+
+.highScore{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    padding: 1rem;
+
+}
